--- a/package.json
+++ b/package.json
@@ -5,14 +5,24 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@testing-library/jest-dom": "^5.14.1",
     "@vitejs/plugin-react": "^1.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.2.2",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.2",
@@ -21,6 +31,9 @@
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^27.2.2",
+    "jest-circus": "^27.2.2",
+    "jest-watch-typeahead": "^0.6.4",
     "vite": "^2.5.4"
   }
 }
