--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.4",
     "jest-circus": "^27.2.4",
     "jest-watch-typeahead": "^1.0.0",
