--- a/.babelrc.json
+++ b/.babelrc.json
@@ -4,7 +4,8 @@
       "presets": [
         ["@babel/preset-env"],
         ["@babel/preset-react", { "runtime": "automatic" }]
-      ]
+      ],
+      "plugins": ["babel-plugin-transform-vite-meta-env"]
     }
   }
 }
