--- a/.babelrc.json
+++ b/.babelrc.json
@@ -2,10 +2,10 @@
   "env": {
     "test": {
       "presets": [
+        ["babel-preset-vite"],
         ["@babel/preset-env"],
         ["@babel/preset-react", { "runtime": "automatic" }]
-      ],
-      "plugins": ["babel-plugin-transform-vite-meta-env"]
+      ]
     }
   }
 }
