--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.4",
-    "babel-plugin-transform-vite-meta-env": "^1.0.3",
+    "babel-preset-vite": "^1.0.4",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.32.0",
