:label: Add React types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
       "@selectors/*": ["src/selectors/*"],
     },
     "resolveJsonModule": true,
+    "types": [
+      "vite/client"
+    ]
   },
   "include": ["src/**/*"]
 }
