--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@testing-library/jest-dom": "^5.14.1",
+    "@types/enzyme": "^3.10.9",
+    "@types/react": "^17.0.26",
+    "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react": "^1.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-eslint": "^10.1.0",
