:heavy_minus_sign: Change airbnb to standard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,7 @@
     "jsx": "react-jsx",
     "outDir": "dist",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@data/*": ["src/data/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@routers/*": ["src/routers/*"],
-      "@selectors/*": ["src/selectors/*"],
+      "@/*": ["src/*"],
     },
     "resolveJsonModule": true,
     "types": [
