--- a/package.json
+++ b/package.json
@@ -27,18 +27,13 @@
     "babel-preset-vite": "^1.0.4",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.5.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.4",
     "jest-circus": "^27.2.4",
     "jest-watch-typeahead": "^1.0.0",
+    "standard": "^16.0.4",
     "vite": "^2.6.2"
   }
 }
