--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@types/enzyme": "^3.10.9",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
-    "@vitejs/plugin-react": "^1.0.5",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@types/enzyme": "^3.10.10",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@vitejs/plugin-react": "^1.0.7",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "alias-hq": "^5.2.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.3.1",
     "babel-preset-vite": "^1.0.4",
@@ -34,6 +35,6 @@
     "jest-circus": "^27.3.1",
     "jest-watch-typeahead": "^1.0.0",
     "standard": "^16.0.4",
-    "vite": "^2.6.10"
+    "vite": "^2.6.13"
   }
 }
