--- a/package.json
+++ b/package.json
@@ -1,40 +1,36 @@
 {
   "name": "react",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint .",
-    "test": "jest --watch"
+    "test": "vite-jest --watch"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^27.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@types/enzyme": "^3.10.10",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react": "^1.1.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "alias-hq": "^5.2.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.3.1",
-    "babel-preset-vite": "^1.0.4",
+    "alias-hq": "^5.3.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.3.1",
-    "jest-circus": "^27.3.1",
-    "jest-watch-typeahead": "^1.0.0",
+    "jest": "^27.4.3",
     "standard": "^16.0.4",
-    "vite": "^2.6.13"
+    "vite": "^2.7.0",
+    "vite-jest": "^0.1.4"
   }
 }
