--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "test": "vite-jest --watch"
   },
   "dependencies": {
-    "jest-environment-jsdom": "^27.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@types/enzyme": "^3.10.10",
     "@types/react": "^17.0.37",
@@ -28,7 +26,8 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.3",
+    "jest-environment-jsdom": "^27.4.3",
+    "react-app-polyfill": "^3.0.0",
     "standard": "^16.0.4",
     "vite": "^2.7.0",
     "vite-jest": "^0.1.4"
